# li_message_automate

./: README.md  profiles.csv  pyproject.toml
li_message_automate/: app.py
