[tool.poetry]
name = "li-message-automate"
version = "0.1.0"
description = ""
authors = ["Asher <ashish.2017@hotmail.com>"]
readme = "README.md"
packages = [{include = "li_message_automate"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
